<resources>
    <string name="app_name">Library</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Member ID</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This user id is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_account_yet">No account yet?
        Contact Library mam.</string>
    <string name="title_activity_main">Library</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="base_url">http://54312839.ngrok.io</string>
    <string name="login_data">LoginData</string>
    <string name="title_RequestBooks">Request Book</string>
    <string name="title_Books">Books</string>
    <string name="request_book_title">Title</string>
    <string name="request_book_author">Author</string>
    <string name="request_book_publisher">Publisher</string>
    <string name="cancel">Cancel</string>
</resources>
